# LeWM_for_Maze

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README.zh.md  REPRODUCE.md  prompt.md  pyproject.toml
a1_quick_validation/: README.zh.md  __init__.py  audit.py  cache_bridge.py  checkpoint_bridge.py  common.py  evidence.py  lock_package.py  plan_jobs.py  profile.py  release_seed_tier.py  run.py  run_jobs.py  schemas.py  selection.py
air_jepa/: README.md  README.zh.md  __init__.py
configs/: base_config.yaml
diagnostics/: DESIGN.md  README.md  __init__.py  build_cache.py  common.py  eval_failure_taxonomy.py  eval_metric_alignment.py  eval_predictor_rollout.py  generate_report.py  run_all.py  train_probes.py
distance_head_study/: README.md  README.zh.md  __init__.py  analyze.py  audit_protocol.py  build_cache.py  candidates.py  close_study.py  common.py  data.py  diagnose.py  evaluate.py  evidence.py  gates.py  generate_bootstrap_schedule.py  generate_manifests.py  lock_confirmation_n.py  lock_negative_closure.py  lock_protocol.py  lock_shortlist.py  losses.py  make_decision.py  merge_results.py  methods.py  models.py  open_confirmation.py  plan_jobs.py  power_analysis.py  protocol.py  release_seed_tier.py  results.py  run_jobs.py  schemas.py  server_preflight.py  taxonomy.py  train_backbone.py  train_head.py  transforms.py
final_closure/: CLAIMS_AND_STOP_RULES.md  COMPATIBILITY.md  ENGINEER_RUNBOOK.md  EXPERIMENT_PROTOCOL.md  README.md  RESULT_SCHEMA.md  VALIDATION.md  __init__.py  audit_protocol.py  common.py  data.py  evaluate.py  (+7 more)
(+311 files in other folders)
